// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content block render Content property 1`] = `
<div>
  <div>
    c11
  </div>
</div>
`;

exports[`Content block render with Content item 1`] = `
<div>
  <div>
    Test content block content
  </div>
</div>
`;
